2006-09-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Implemented monster attack SFX; verified in the originals.

2006-09-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* ucsched.cc, actors.*, gamewin.cc: Looking at 'no_halt' script opcode in
	  a slightly different way. In particular, this prevents silver serpent
	  venom from freezing the user for 1 game hour.
	* ucsym.h: Fixed a GCC 4 compile problem.
	* keys.cc: Changed a few identing spaces to tabs.

2006-09-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Reduced avatar's speed to prevent outrunning of the teleport storm at the
	  start of SI. The reulting speed also seems to match the original games
	  better, as it is now very hard to outrun enemies. The avatar's speed is
	  also reduced if it is in a (delayed) usecode script, which helps to
	  prevent outrunning the teleport storm without making the avatar too slow
	  while in combat mode. Also, switched a few identing spaces to tabs.
	* Preventing player from moving avatar during the execution of scripts; this
	  is verified in BG and SI (for example, loom or bellows); delayed scripts do
	  not seem to hinder movement until they are activated.
	* Prevent ES from displaying the 'font0000.vga' file in SI's static dir as it
	  is apparently from an old origin screensaver and is not a true vga file.
	* Fixed bug causing avatar's 'rest_time' to build up too fast. Incidentally,
	  this helps to fix a jerkiness in scripts introduced in previous commits.
	  Also, script opcode 'delay' and any scripted frame changes or steps now will
	  clear the rest time for actors.
	* Fixed problem in Windows builds with USE_EXULTSTUDIO option which caused
	  excessive processor usage, as well as being indirectly responsible for the
	  rapid build-up of the avatar's 'rest_time'.
	* The files 'paperdoll_info.txt', 'bodies.txt' and 'shape_info.txt' (and
	  similar files in the future -- and with the exception of the files bundled